--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <header>
       <div class="header">
-        Lithium
+        Lilithium
         <ul class="head-list">
           <li><a href="#"> link 1</a></li>
           <li><a href="#">link 2</a></li>
