added hover effects to links (orange so we can see for now)

--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
   <body>
     <header>
       <div class="header">
-        Lilithium
+        Lithium
         <ul class="head-list">
-          <li><a href="#"> link 1</a></li>
-          <li><a href="#">link 2</a></li>
-          <li><a href="#">link 3</a></li>
+          <li><a href="#"> LISTEN</a></li>
+          <li><a href="#">ABOUT</a></li>
+          <li><a href="#">SHOWS</a></li>
+          <li><a href="#">MERCH</a></li>
         </ul>
       </div>
     </header>
@@ -23,15 +24,19 @@
     <div>
       <aside>
         <ul>
-          <li><a href="#"> LISTEN</a></li>
-          <li><a href="#"> SEE US LIVE</a></li>
-          <li><a href="#"> MERCH</a></li>
+          <li><a href="#"> (blank)</a></li>
+          <li><a href="#"> (blank)</a></li>
+          <li><a href="#"> (blank)</a></li>
           <li></li>
         </ul>
       </aside>
 
       <main>
-        <h1>Content content content</h1>
+        <!--<h1>Content</h1>-->
+        <img src="images/rock.jpg" alt="random image" />
+        <img src="images/rock.jpg" alt="random image" />
+        <img src="images/rock.jpg" alt="random image" />
+        <p>Album coming soon!</p>
       </main>
     </div>
 
