--- a/index.html
+++ b/index.html
@@ -11,35 +11,34 @@
   <body>
     <header>
       <div class="header">
-        Lithium
         <ul class="head-list">
           <li><a href="#"> LISTEN</a></li>
           <li><a href="#">ABOUT</a></li>
           <li><a href="#">SHOWS</a></li>
           <li><a href="#">MERCH</a></li>
+          <li><a href="#">MERCH</a></li>
+          <li><a href="#">MERCH</a></li>
+          <li><a href="#">MERCH</a></li>
+          <li><a href="#">MERCH</a></li>
+          <li><a href="#">MERCH</a></li>
         </ul>
       </div>
     </header>
-
+    <h1>lithium</h1>
     <div>
-      <aside>
-        <ul>
-          <li><a href="#"> (blank)</a></li>
-          <li><a href="#"> (blank)</a></li>
-          <li><a href="#"> (blank)</a></li>
-          <li></li>
-        </ul>
-      </aside>
-
       <main>
         <!--<h1>Content</h1>-->
-        <img src="images/rock.jpg" alt="random image" />
-        <img src="images/rock.jpg" alt="random image" />
-        <img src="images/rock.jpg" alt="random image" />
-        <p>Album coming soon!</p>
+        <div class="container">
+          <img src="images/rock.jpg" alt="random image" />
+          <img src="images/rock.jpg" alt="random image" />
+          <img src="images/rock.jpg" alt="random image" />
+        </div>
+        <p>Album coming soon</p>
       </main>
     </div>
-
+    <div class="album-art">
+      <p>This is a temporary spot for something</p>
+    </div>
     <footer>
       <h1></h1>
       <a href="https://linktr.ee/lithiumband"
