--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>LithiumBand</title>
 
     <link href="style.css" rel="stylesheet" type="text/css" />
+    <!--<link href="reset.css" rel="stylesheet" type="text/css" />-->
   </head>
 
   <body>
@@ -14,7 +15,7 @@
         <ul class="head-list">
           <li><a href="#"> LISTEN</a></li>
           <li><a href="#">ABOUT</a></li>
-          <li><a href="#">SHOWS</a></li>
+          <li><a href="google.com">SHOWS</a></li>
           <li><a href="#">MERCH</a></li>
           <li><a href="#">MERCH</a></li>
           <li><a href="#">MERCH</a></li>
